# space-together-api

./: .env  .example.env  .exmple.env  .gitignore  Cargo.toml  Dockerfile  README.md  RESTART_SERVER.md  TEST_RESULTS.md  codebook.toml  cspell.json  docker-compose.yaml  e.md  ersrbhapVideosGitHub1space-together-api git fetch --all  exmple.env  git  test_messaging_api.sh
.github/workflows/: prod.yml
app-14/: 2.md
design/: PARENT_PORTAL_SUMMARY.md
docs/: ANALYTICS_DASHBOARD_IMPLEMENTATION.md  ASSIGNMENT_QUICKSTART.md  ASSIGNMENT_SYSTEM.md  AUDIT_LOG_API_EXAMPLES.md  AUDIT_LOG_IMPLEMENTATION_COMPLETE.md  AUDIT_LOG_INTEGRATION.md  AUTH_LOGIN_SCHOOL_MEMBER_FIX.md  AUTH_OPTIMIZATION_SUMMARY.md  AUTH_PERFORMANCE_OPTIMIZATION.md  BACKUP_FIXES_APPLIED.md  BACKUP_SYSTEM_SUMMARY.md  CONVERSATION_AUTO_PARTICIPANT_FIX.md  CRYPTO_UTILS_FIX.md  DOCUMENTATION_COMPLETE.md  DUPLICATE_KEY_FIX.md  GUARD_USAGE_AUDIT.md  IMPLEMENTATION_COMPLETE.md  LEARNING_MATERIALS_IMPLEMENTATION.md  LEARNING_MATERIALS_SUMMARY.md  MESSAGING_API_QUICK_REFERENCE.md  MESSAGING_ENCRYPTION_API.md  MESSAGING_FRONTEND_INTEGRATION.md  MESSAGING_IMPLEMENTATION.md  MESSAGING_IMPLEMENTATION_SUMMARY.md  MESSAGING_SYSTEM_ARCHITECTURE.md  MESSAGING_SYSTEM_COMPLETE.md  PARENT_CHILD_ACCESS_APPLIED.md  PERMISSION_GUARDS_APPLIED.md  PUBLIC_KEY_API_UPDATE.md  PUBLIC_KEY_AUTO_GENERATION.md  PUBLIC_KEY_FIX_SUMMARY.md  PUBLIC_KEY_SECOND_REQUEST_FIX.md  QUERY_BY_IDS_USAGE.md  RAND_0.8_MIGRATION.md  ROLE_PERMISSION_IMPLEMENTATION.md  USER_REPO_REFACTOR.md
frontend/: CONVERSATION_CREATION_API.md
prompts/: task-2.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md  task-8.md  task-9.md  tast-1.md
src/: errors.rs  main.rs  pages_template.rs  routes.rs
src/api/: analytics_api.rs  announcement.rs  announcement_api.rs  assessment_category_api.rs  assignment_api.rs  audit_logs_api.rs  auth.rs  auth_api.rs  backups_api.rs  class.rs  class_api.rs  class_subject.rs  class_timetable.rs  comment_api.rs  conversations_api.rs  database_status.rs  education_year.rs  education_year_api.rs  events.rs  exam_api.rs  grading_scale_api.rs  join_school_request.rs  join_school_request_api.rs  learning_materials_api.rs  like_api.rs  main_class.rs  main_class_api.rs  messages_api.rs  messaging_socket.rs  messaging_users_api.rs  mod.rs  parent_api.rs  (+25 more)
tests/: messaging_users_api_test.rs
(+350 files in other folders)
