[package]
name = "space-together-api"
version = "0.1.0"
edition = "2021"
authors = ["HAPPYHEART Bruno <brunorwanda4@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Space Together APIs."
homepage = "https://youtu.be/XZtlD_m59sM"
repository = "https://github.com/rust-httpc-test"

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow" # For experimental dev.

[lints]
workspace = true

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# -- Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.7"
tower-http = { version = "0.5", features = ["fs" , "cors"] }
tower-cookies = "0.10"
# -- Others
lazy-regex = "3"
strum_macros = "0.25"
uuid = {version = "1", features = ["v4","fast-rng",]}
bcrypt = "0.15.1"
chrono = {version = "0.4.38", features = ["serde"]}
crypto = "0.5.1"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"


[dependencies.mongodb]
version = "3.0.1"
features = ["sync"]
