[package]
name = "space-together-api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/space-together/space-together-api"
description = "space-together-api which implements all request from space-together applications."
authors = ["Rwanda Bruno Happyheart <brunorwanda4@gmail.com>"]

[dependencies]
actix-web = "4.11.0"
config = "0.15.14"
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
tokio = "1.41.1"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-envlogger = "2.2.0"
futures = "0.3.31"
regex = "1.11.1"
rand = "0.9.2"
itertools = "0.14.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
actix-cors = "0.7.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
chrono = { version = "0.4.39", features = ["serde"] }
actix-web-lab = "0.24.2"
bcrypt = "0.17.1"
log = "0.4"
env_logger = "0.11.8"
num_cpus = "1.0"
dotenvy = "0.15.7"
argon2 = "0.5.3"
actix-multipart = "0.7.2"
reqwest = { version = "0.12.23", features = ["multipart"] }
sha1 = "0.10.6"
tempfile = "3.22.0"
mime = "0.3.17"
hex = "0.4.3"
base64 = "0.22.1"


[dependencies.mongodb]
version = "3.2.4"
features = ["sync"]

[[bin]]
name = "space-together-api"
path = "src/main.rs"
